--- a/index.html
+++ b/index.html
@@ -57,18 +57,19 @@
 	<!--Jquery Smooth Scrolling-->
 	<script>
 		$(document).ready(function(){
-			$('.custom-menu a[href^="#"], .intro-scroller .inner-link').on('click',function (e) {
-				e.preventDefault();
+			// $('.custom-menu a[href^="#"], .intro-scroller .inner-link')
+			// .on('click',function (e) {
+			// 	e.preventDefault();
 
-				var target = this.hash;
-				var $target = $(target);
+			// 	var target = this.hash;
+			// 	var $target = $(target);
 
-				$('html, body').stop().animate({
-					'scrollTop': $target.offset().top
-				}, 900, 'swing', function () {
-					window.location.hash = target;
-				});
-			});
+			// 	$('html, body').stop().animate({
+			// 		'scrollTop': $target.offset().top
+			// 	}, 900, 'swing', function () {
+			// 		window.location.hash = target;
+			// 	});
+			// });
 
 			$('a.page-scroll').bind('click', function(event) {
 				var $anchor = $(this);
@@ -78,10 +79,10 @@
 				event.preventDefault();
 			});
 
-		   $(".nav a").on("click", function(){
-				 $(".nav").find(".active").removeClass("active");
-				$(this).parent().addClass("active");
-			});
+		 //   $(".nav a").on("click", function(){
+			// 	 $(".nav").find(".active").removeClass("active");
+			// 	$(this).parent().addClass("active");
+			// });
 
 			$('body').append('<div id="toTop" class="btn btn-primary color1"><span class="glyphicon glyphicon-chevron-up"></span></div>');
 				$(window).scroll(function () {
