--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             .then(function(){
             }, console.error.bind(console));
  </script>
-	<home>Loading...........</home>
+	<home>Loading...!</home>
 
 	<!-- jQuery -->
 	<script src="js/jquery.js"></script>
