initial addition of login modal

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Open Door!</title>
+		<title>Dashboard!</title>
 		<meta name="description" content="">
 		<!-- Bootstrap Core CSS -->
-		<link href="lib/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- Custom Fonts -->
 		<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 		<!-- Custom CSS -->
@@ -44,12 +44,10 @@
             .then(function(){
             }, console.error.bind(console));
  </script>
-	<home>
-		<h3>Please wait...</h3>
-	</home>
+	<home>Loading...!</home>
 
 	<!-- jQuery -->
-	<script src="lib/jquery.min.js"></script>
+	<script src="lib/jquery.js"></script>
 	<!-- Bootstrap Core JavaScript -->
 	<script src="lib/bootstrap.min.js"></script>
 
