--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 	<!-- jQuery -->
 	<script src="lib/jquery.min.js"></script>
 	<!-- Bootstrap Core JavaScript -->
-	<script src="lib/bootstrap.min.js"></script>
+	<script src="lib/ng2-bootstrap.js"></script>
+	
 
 	<!-- Portfolio -->
 	<script src="lib/jquery.quicksand.js"></script>	  
