--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 	<script src="lib/angular2-polyfills.js"></script>
 	<script src="lib/system.src.js"></script>
-	<script src="lib/Rx.js"></script>
+	<script src="lib/Rx.min.js"></script>
 	<script src="lib/angular2.dev.js"></script>
 	<script src="lib/moment.min.js"></script>
 </head>
