progress on the login

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 	<script src="lib/angular2.dev.js"></script>
 	<script src="lib/http.dev.js"></script>
 	<script src="lib/moment.min.js"></script>
+	
+	<script src="lib/ng2-cookies.js"></script>
 </head>
 
 <body data-spy="scroll">
@@ -49,7 +51,8 @@
 				}
 			},
 			map: {
-				moment: 'lib/moment.min.js'
+				moment: 'lib/moment.min.js',
+				'angular2-modal/angular2-modal': 'lib/angular2-modal-0.1.0.min.js'
 			}
 		});
 
