--- a/app/login/login.window.html
+++ b/app/login/login.window.html
@@ -5,10 +5,6 @@
             <div class="modal-header login-modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title text-center" id="loginModalLabel">USER AUTHENTICATION</h4>
-                <h4 *ngFor="#u of users">
-                    {{u.email}}
-                </h4>
-
             </div>
             <div class="modal-body">
                 <div class="text-center">
@@ -22,18 +18,18 @@
                                     <div class="form-group">
                                         <div class="input-group">
                                             <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                                            <input type="text" class="form-control" id="login_username" placeholder="Username">
+                                            <input type="email" class="form-control" id="login_email" placeholder="Email" [(ngModel)]="user.email">
                                         </div>
                                         <span class="help-block has-error" id="email-error"></span>
                                     </div>
                                     <div class="form-group">
                                         <div class="input-group">
                                             <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                            <input type="password" class="form-control" id="password" placeholder="Password">
+                                            <input type="password" class="form-control" id="login_password" placeholder="Password" [(ngModel)]="user.password">
                                         </div>
                                         <span class="help-block has-error" id="password-error"></span>
                                     </div>
-                                    <button type="button" id="login_btn" class="btn btn-block bt-login" data-loading-text="Signing In....">Login</button>
+                                    <button type="button" id="login_btn" (click)="login()" class="btn btn-block bt-login" data-loading-text="Signing In....">Login</button>
                                     <div class="clearfix"></div>
                                     <div class="login-modal-footer">
                                         <div class="row">
@@ -59,18 +55,18 @@
                                     <div class="form-group">
                                         <div class="input-group">
                                             <div class="input-group-addon"><i class="fa fa-at"></i></div>
-                                            <input type="email" [(ngModel)]="currentUser.email" class="form-control" placeholder="Email" >
+                                            <input type="email" [(ngModel)]="user.email" class="form-control" placeholder="Email" >
                                         </div>
                                         <span class="help-block has-error" data-error='0' id="username-error"></span>
                                     </div>
                                     <div class="form-group">
                                         <div class="input-group">
                                             <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                            <input type="password" [(ngModel)]="currentUser.password" class="form-control" placeholder="Password">
+                                            <input type="password" [(ngModel)]="user.password" class="form-control" placeholder="Password">
                                         </div>
                                         <span class="help-block has-error" data-error='0' id="remail-error"></span>
                                     </div>
-                                    <button type="button" id="register_btn" (click)="register()" class="btn btn-block bt-login" data-loading-text="Registering....">Register</button>
+                                    <button type="button" id="register_btn" (click)="sinup()" class="btn btn-block bt-login" data-loading-text="Registering....">Register</button>
                                     <div class="clearfix"></div>
                                     <div class="login-modal-footer">
                                         <div class="row">
